--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,33 @@
+ What to work on:
+ 1. show industry on each project and on feed
+ 2. show skills on each project and on feed and on profile page
+ 3. Individual project page ejs
+ 4. Individual profile page ejs
+ 5. Sessions
+ 6. Authentication
+
+ 
+ 
+ 
+ 
+ 
+
+
+Extra Features:
+1. Project chat
+2. Page for list of projects related to one user
+3. Comments section on project page
+
+
+
+
+
+
+
+
+ 
+ Alfie's Notes
+ 
  responsiveness
 
 background color for cards with border
